Sat Oct 19 07:14:40 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 42543b6.  Changes:

	  Fix `gem update` for gems with multiple platforms.

	* test/rubygems:  ditto.

Sat Oct 19 06:55:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 0a3814b.  Changes:

	  Fixed extension directory in Gem::Specification#require_paths.

	  Allow installation of gems when $HOME is nonexistent or unwritable.

	  Use proper API in InstallCommand.

	  Improve support for path option in gem dependency files.

	  Remove warnings.

	* test/rubygems:  ditto.

Fri Oct 18 15:23:34 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change terminology of heap.
	  Change "slot" to "page". "Slot" is a space of RVALUE.
	  1. "Heap" consists of a set of "heap_page"s (pages).
	  2. Each "heap_page" has "heap_page_body".
	  3. "heap_page_body" has RVALUE (a.k.a. "slot") spaces.
	  4. "sorted" is a sorted array of "heap_page"s, sorted
	     by address of heap_page_body (for "is_pointer_to_heap").

	  See https://bugs.ruby-lang.org/attachments/4008/data-heap_structure.png.

Fri Oct 18 09:40:43 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master cee6788.  Changes:

	  Fix test failure on vc10-x64 Server on rubyci.org due to attempting
	  to File.chmod where it is not supported.

	  Continuing work on improved gem dependencies file (Gemfile) support.

	* test:  ditto.

Fri Oct 18 06:02:49 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master f738c67.  Changes:

	  Fixed test bug for ruby with ENABLE_SHARED = no

	* test/rubygems:  ditto.

Fri Oct 18 00:57:07 2013  Tanaka Akira  <akr@fsij.org>

	* lib/tsort.rb (TSort.tsort): Extracted from TSort#tsort.
	  (TSort.tsort_each): Extracted from TSort#tsort_each.
	  (TSort.strongly_connected_components): Extracted from
	  TSort#strongly_connected_components.
	  (TSort.each_strongly_connected_component): Extracted from